<?xml version="1.0"?>
<package format="3">
  <name>python_path_searching</name>
  <version>0.0.0</version>
  <description>Python path searching algorithms including A* planner and path tracking nodes</description>
  <maintainer email="fynngwu@users.noreply.github.com">wufy</maintainer>
  <license>LGPL-3.0-only</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
